--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>object picking with three.js</title>
-		<script type="text/javascript" src="../_libs/three.min.js"></script>
-		<script type="text/javascript" src="../_libs/TrackballControls.js"></script>
+		<script type="text/javascript" src="_libs/three.min.js"></script>
+		<script type="text/javascript" src="_libs/TrackballControls.js"></script>
 		<script type="text/javascript" src="main.js"></script>
-		<link rel="stylesheet" href="../_css/style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="_css/style.css" type="text/css" media="screen" />
 	</head>
 	<body>
 		<h1 id="headline">Obj Picking</h1>
