Picking only once.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<h1 id="headline">Obj Picking</h1>
+		<h1 id="elapsedTime">Time</h1>
 		<div id="container">
 		</div>
 	</body>
