--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<h1 id="headline">Obj Picking</h1>
-		<h1 id="elapsedTime">Time</h1>
+		<h1 id="elapsedTime">Elapsed Time for picking an object.(ms) :</h1>
 		<div id="container">
 		</div>
 	</body>
